--- a/deny.toml
+++ b/deny.toml
@@ -29,8 +29,8 @@ targets = [
 [advisories]
 # The path where the advisory database is cloned/fetched into
 db-path = "~/.cargo/advisory-db"
-# The url of the advisory database to use
-db-url = "https://github.com/rustsec/advisory-db"
+# The url(s) of the advisory database to use
+db-urls = ["https://github.com/rustsec/advisory-db"]
 # The lint level for security vulnerabilities
 vulnerability = "warn"
 # The lint level for unmaintained crates
