--- a/deny.toml
+++ b/deny.toml
@@ -33,7 +33,10 @@ ignore = []
 # List of explictly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.7 short identifier (+ optional exception)].
-allow = []
+allow = [
+    "MIT",
+    "Apache-2.0",
+]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
