--- a/deny.toml
+++ b/deny.toml
@@ -36,6 +36,7 @@ ignore = []
 allow = [
     "MIT",
     "Apache-2.0",
+    "Unicode-DFS-2016",
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
